--- a/app.json
+++ b/app.json
@@ -1,11 +1,14 @@
 {
   "pages": [
+    "pages/index/index",
+    "pages/login/login",
+    
+    "pages/myspace/myspace",
+    "pages/index/childPages/power/yitiji/yitiji",
+    "pages/index/childPages/power/kongkai/kongkai",
     "pages/index/childPages/power/socket/socket",
     "pages/index/childPages/power/power",
-    "pages/index/index",
-    "pages/scancode/scancode",
-    "pages/myspace/myspace"
-    
+    "pages/scancode/scancode"
     
   ],
   "tabBar": {
