--- a/app.json
+++ b/app.json
@@ -9,7 +9,10 @@
     "pages/index/childPages/power/kongkai/kongkai",
     "pages/scancode/scancode",
     "pages/index/childPages/power/lamp/lamp",
-    "pages/index/childPages/power/kongtiao/kongtiao"
+    "pages/index/childPages/power/kongtiao/kongtiao",
+    "pages/index/childPages/water/water",
+    "pages/index/childPages/water/waterDetail/waterDetail",
+    "pages/index/childPages/power/lock/lock"
   ],
   "tabBar": {
     "color": "#333",
